--- a/style.css
+++ b/style.css
@@ -7,6 +7,27 @@ body {
 	text-align: center;
 }
 
+#debug {
+	font-family: monospace;
+	text-align: center;
+	user-select: none;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vw;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-end;
+}
+
+#debug p {
+	margin: 2px;
+	color: whitec;
+	display: inline;
+}
+
 #canvas {
 	z-index: -1;
 	position: absolute;
